Fix wrapping.

--- a/src/sphinx_antsibull_ext/css/antsibull-minimal.scss
+++ b/src/sphinx_antsibull_ext/css/antsibull-minimal.scss
@@ -174,6 +174,7 @@ table.ansible-option-table {
 
   td {
     padding: 0 !important;
+    white-space: normal;
 
     > div.ansible-option-cell  {
       padding: 8px 16px;
@@ -189,6 +190,7 @@ table.ansible-option-table {
     > div.ansible-option-cell  {
       height: inherit;
       flex: 1 0 auto;
+      white-space: nowrap;
     }
   }
 
